.txt and .md drophandler
Added support for dropping in .txt and .md files. Markdown div resizing is a wip

--- a/index.html
+++ b/index.html
@@ -339,14 +339,11 @@
 
     </div>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/pyodide/v0.23.0/full/pyodide.js"></script>
-
     <script src="zettelkasten.js"></script>
-
     <script src="dropdown.js"></script>
-
     <script src="interface.js"></script>
-
     <script src="ai.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </body>
 
 </html>
