--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                 <option value="other">Other...</option>
                             </select>
                             <input id="model-input" class="model-input" style="display: none;" placeholder="Enter model name">
-                            <input id="gmodel-input" style="display: none;" placeholder="Enter model name">
+                            <input id="model-input" style="display: none;" placeholder="Enter model name">
                         </div>
                         <label for="max-tokens-slider">Max Tokens: <span id="max-tokens-display">2000</span></label>
                         <input type="range" id="max-tokens-slider" name="max-tokens-slider" min="1" max="32000" value="2000">
