Opacity Slider + highlighting bugfix
Added an opacity slider with checkboxes to freeze the inner and outer rendering to the current slider value. Also fixed all cases of interaction with nodes highlighting the dropdown slider.

--- a/index.html
+++ b/index.html
@@ -129,6 +129,15 @@
                         <input id="length" type="range" min="0" max="100" value="50">
                         z <sup id="exponent_value" style="color: powderblue">2</sup> + c
                         <input id="exponent" type="range" min="1" max="8" value="2">
+                        <div id="opacity_value">Opacity</div>
+                        <input id="opacity" type="range" min="0" max="100" value="100">
+                        <input type="checkbox" id="outerCheckbox">
+                        <label for="outerCheckbox">: Freeze Outer Opacity</label>
+                        <br />
+                        <input type="checkbox" id="innerCheckbox">
+                        <label for="innerCheckbox">: Freeze Inner Opacity</label>
+
+                        <br />
                         <br />
                         <div id="coordinates" style="background-color: none;background-color: none; color:none; position: inherit; display: initial; left: 0px; top: 0px;">
                             pan:
