Improved LLM node context limits.
Made sure connected nodes don't exceed the max context size.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="tabs">
                     <button class="tablink" onclick="openTab('tab1', this)">Notes</button>
                     <button class="tablink" onclick="openTab('tab4', this)">Ai</button>
-                    <button class="tablink" onclick="openTab('tabExtract', this)">Context</button>
+                    <button class="tablink" onclick="openTab('tabExtract', this)">Extracts</button>
                     <button class="tablink" onclick="openTab('tab2', this)">Settings</button>
                     <button class="tablink" onclick="openTab('tab3', this)">?</button>
                 </div>
