--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                             <input type="password" id="googleApiKey">
                         </div>
                         <div class="google-key-input">
-                            <label for="googleSearchEngineId">Google Search Engine ID:</label>
+                            <label for="googleSearchEngineId">Search Engine ID:</label>
                             <input type="password" id="googleSearchEngineId">
                         </div>
                         <div class="wolfram-key-input">
