Custom checkboxes and range inputs.
+ caching summarized zettelkasten prompt.

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                     <div id="howto" class="howto custom-scrollbar">
                         <table>
                             <tr>
-                                <td><input type="checkbox" id="instructions-checkbox"><label for="instructions-checkbox"><br /><strong> AI HOW-TO</strong></label></td>
-                                <td>Allows the ai to explain the website and its controls.</td>
+                                <td><strong> AI HOW-TO</strong></td>
+                                <td><input type="checkbox" id="instructions-checkbox"><label for="instructions-checkbox">This checkbox enables the Ai to explain the website and its controls.</label></td>
                             </tr>
                             <tr>
                                 <td><a href="https://github.com/satellitecomponent/Neurite" id="clickable-link">Github Link</a></td>
