--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         </form>
                         <br />
                         <div>
-                        <textarea id="note-input" class="zettelkasten" rows="10" cols="50"></textarea>
+                            <textarea id="note-input" class="zettelkasten" rows="10" cols="50"></textarea>
                         </div>
                         <div class="checkboxarray">
                             <div>
@@ -374,11 +374,12 @@
 
     </div>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/pyodide/v0.23.0/full/pyodide.js"></script>
-    <script src="zettelkasten.js"></script>
-    <script src="dropdown.js"></script>
-    <script src="interface.js"></script>
-    <script src="ai.js"></script>
+    <script src="js/zettelkasten.js"></script>
+    <script src="js/dropdown.js"></script>
+    <script src="js/interface.js"></script>
+    <script src="js/ai.js"></script>
+    <!-- <script type="module" src="webLLM/webllm.ts"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </body>
 
-</html>
+    </html>
