--- a/index.html
+++ b/index.html
@@ -2,8 +2,25 @@
 <html>
 
 <head>
-    <title>Mandelbrott</title>
+    <title>Neurite</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/codemirror@6/lib/codemirror.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/codemirror@6/addon/scroll/simplescrollbars.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@6/lib/codemirror.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@6/addon/scroll/simplescrollbars.css">
+    <style type="text/css">
+        .cm-node {
+            color: #D15050;
+        }
+
+        .cm-ref {
+            color: #4F8EB7;
+        }
+
+        .cm-Prompt {
+            color: #E0B0FF;
+        }
+    </style>
 </head>
 
 <body id="body">
