ZoomTo for Syntax highlighting

--- a/index.html
+++ b/index.html
@@ -7,18 +7,23 @@
     <script src="https://cdn.jsdelivr.net/npm/codemirror@6/lib/codemirror.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@6/addon/scroll/simplescrollbars.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@6/lib/codemirror.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@6/addon/scroll/simplescrollbars.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5/addon/scroll/simplescrollbars.css">
     <style type="text/css">
         .cm-node {
             color: #D15050;
+
         }
 
         .cm-ref {
             color: #4F8EB7;
+
         }
 
         .cm-Prompt {
             color: #E0B0FF;
+            background-color: #464250;
+            border-radius: 5px; /* adjust as needed */
+            padding: 2px;
         }
     </style>
 </head>
