Save history + Improved Ui

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <div class="checkboxarray">
                             <div>
                                 <input type="checkbox" id="google-search-checkbox" name="enable-search">
-                                <label for="google-search-checkbox">: Search</label>
+                                <label for="google-search-checkbox">Search</label>
 
                             </div>
                             <div>
